[package]
name = "LuaEngineEx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"

[dependencies]
mhw_toolkit = { path = "../mhw-toolkit", features = ["logger", "hooks"]}
libc = "0.2.154"
winapi = { version = "0.3.9", features = ["minwindef", "winnt"] }
log = "0.4.21"
once_cell = "1.19.0"
mlua = { version = "0.9.7", features = ["lua54", "vendored"] }
tokio = { version = "1.37.0", features = ["full"] }
futures-util = "0.3.30"
snafu = "0.8.2"
clap = { version = "4.5.4", features = ["derive"] }
